All pages commited

--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@
         </div>
 
         <div class="home__product">
-          <button href="product.html" class="button">Show More</button>
+          <a href="product.html">Show More</a>
         </div>
 
     </div>
