sproduct html url added

--- a/product.html
+++ b/product.html
@@ -85,7 +85,7 @@
 
         <div class="product__item">
           <h3 class="p__item--txt">Add A Product</h3>
-          <button class="button">Choose a Product &nbsp; &nbsp; &nbsp; <i class="fa-solid fa-chevron-down" style="color: #fff;"></i></button>
+          <a href="sproduct.html" class="button">Choose a Product &nbsp; &nbsp; &nbsp; <i class="fa-solid fa-chevron-down" style="color: #fff;"></i></a>
         </div>
 
       </div>
@@ -168,7 +168,7 @@
             <li>The Warranty Does Not Cover Damages Due To Usage Of The Product Beyond Its Intended Use And Wear & Tear In The Natural Course Of Product Usage.</li>
             <li>1 Year</li>
 
-            <button class="button">Add To Cart</button>
+            <a href="sproduct.html" class="button">Add To Cart</a>
           </ul>
 
         </div>
@@ -207,7 +207,7 @@
             <li>The Warranty Does Not Cover Damages Due To Usage Of The Product Beyond Its Intended Use And Wear & Tear In The Natural Course Of Product Usage.</li>
             <li>1 Year</li>
 
-            <button class="button">Add To Cart</button>
+            <a href="sproduct.html" class="button">Add To Cart</a>
           </ul>
 
         </div>
