Cart page url added

--- a/product.html
+++ b/product.html
@@ -168,7 +168,7 @@
             <li>The Warranty Does Not Cover Damages Due To Usage Of The Product Beyond Its Intended Use And Wear & Tear In The Natural Course Of Product Usage.</li>
             <li>1 Year</li>
 
-            <button class="button">Add To Cart</button>
+            <a href="cart.html" class="button">Add To Cart</a>
           </ul>
 
         </div>
@@ -207,7 +207,7 @@
             <li>The Warranty Does Not Cover Damages Due To Usage Of The Product Beyond Its Intended Use And Wear & Tear In The Natural Course Of Product Usage.</li>
             <li>1 Year</li>
 
-            <button class="button">Add To Cart</button>
+            <a href="cart.html" class="button">Add To Cart</a>
           </ul>
 
         </div>
