main card display added

--- a/shop.html
+++ b/shop.html
@@ -75,6 +75,26 @@
               <li>Stylish cafe chair</li>
               <strong>Rp 2.500.000</strong> <del>Rp 3.500.000</del>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -85,6 +105,26 @@
               <li>Stylish cafe chair</li>
               <strong>Rp 2.500.000</strong>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -95,6 +135,26 @@
               <li>Luxury big sofa</li>
               <strong>Rp 7.000.000</strong> <del>Rp 14.000.000</del>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -105,6 +165,26 @@
               <li>Outdoor bar table and stool</li>
               <strong>Rp 500.000</strong>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -115,6 +195,26 @@
               <li>Stylish cafe chair</li>
               <strong>Rp 2.500.000</strong> <del>Rp 3.500.000</del>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -125,6 +225,26 @@
               <li>Stylish cafe chair</li>
               <strong>Rp 2.500.000</strong>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -135,6 +255,26 @@
               <li>Luxury big sofa</li>
               <strong>Rp 7.000.000</strong> <del>Rp 14.000.000</del>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -145,6 +285,26 @@
               <li>Outdoor bar table and stool</li>
               <strong>Rp 500.000</strong>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -155,6 +315,26 @@
               <li>Stylish cafe chair</li>
               <strong>Rp 2.500.000</strong> <del>Rp 3.500.000</del>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -165,6 +345,26 @@
               <li>Stylish cafe chair</li>
               <strong>Rp 2.500.000</strong>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -175,6 +375,26 @@
               <li>Luxury big sofa</li>
               <strong>Rp 7.000.000</strong> <del>Rp 14.000.000</del>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -185,6 +405,26 @@
               <li>Outdoor bar table and stool</li>
               <strong>Rp 500.000</strong>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -195,6 +435,26 @@
               <li>Stylish cafe chair</li>
               <strong>Rp 2.500.000</strong> <del>Rp 3.500.000</del>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -205,6 +465,26 @@
               <li>Stylish cafe chair</li>
               <strong>Rp 2.500.000</strong>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -215,6 +495,26 @@
               <li>Luxury big sofa</li>
               <strong>Rp 7.000.000</strong> <del>Rp 14.000.000</del>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
           <div class="shop__card">
@@ -225,6 +525,26 @@
               <li>Outdoor bar table and stool</li>
               <strong>Rp 500.000</strong>
             </ul>
+
+            <div class="productadd__cart">
+              <a href="cart.html">Add a cart</a>
+
+              <div class="productadd__card--item">
+                <ul class="pac__ul">
+                  <img src="./images/share.png" alt="photo share">
+                  <strong>Share</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/connect.png" alt="photo share">
+                  <strong>Compare</strong>
+                </ul>
+                <ul class="pac__ul">
+                  <img src="./images/heart.png" alt="photo share">
+                  <strong>Like</strong>
+                </ul>
+              </div>
+            </div>
+
           </div>
 
         </div>
