--- a/sproduct.html
+++ b/sproduct.html
@@ -17,7 +17,7 @@
           <img src="./images/logo.svg" alt="logo website">
     
           <ul class="nav__menu">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="blog.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
