--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li><a href="blog.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+      <button class="close">
+        &#10005;
+      </button>
       <ul class="nav__icons">
         <img src="./images/user-icon.svg" alt="inocs">
         <i class="fa-solid fa-magnifying-glass fa-beat"></i>
@@ -345,7 +348,7 @@
             <swiper-slide><img src="./images/scroll1img.png" alt=""></swiper-slide>
         
           </swiper-container>
-          <swiper-container class="mySwiper" pagination="true" pagination-clickable="true" navigation="true" space-between="30"
+          <swiper-container class="mySwiper swipr" pagination="true" pagination-clickable="true" navigation="true" space-between="30"
           loop="true">
           <swiper-slide><img src="./images/scroll1img.png" alt=""></swiper-slide>
           <swiper-slide><img src="./images/scroll2img.png" alt="img"></swiper-slide>
